--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/BolajiAyodeji/hashnode-discord-bot/issues"
   },
   "homepage": "https://github.com/BolajiAyodeji/hashnode-discord-bot#readme",
-  "devDependencies": {
-    "nodemon": "^1.19.1"
+  "dependencies": {
+    "discord.js": "^11.5.1"
   }
 }
