--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "skipLibCheck": true,
         "strictNullChecks": true,
         "noImplicitThis": true,
-        "inlineSourceMap": true
+        "inlineSourceMap": true,
+        "moduleResolution": "node"
     },
     "include": [
         "src"
