--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@types/node": "^12.7.4",
     "discord.js": "^11.5.1",
     "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^6.1.0"
   }
 }
