--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/node": "^12.7.4",
     "discord.js": "^11.5.1",
+    "dotenv": "^8.1.0",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
