--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^12.7.4",
     "discord.js": "^11.5.1",
     "dotenv": "^8.1.0",
+    "graphql-request": "^1.8.2",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
